--- a/Big_Data_Project.ipynb
+++ b/Big_Data_Project.ipynb
@@ -23,7 +23,7 @@
           "height": 17
         },
         "id": "6bd898a5",
-        "outputId": "fab8f16d-b001-4526-b1f1-3c633622658e"
+        "outputId": "23f13918-ba56-4076-ed3d-6952c8fc43ad"
       },
       "outputs": [
         {
@@ -93,7 +93,7 @@
           "height": 342
         },
         "id": "9PnxCdS-W0fm",
-        "outputId": "c0a92330-90c9-40e8-e51c-dad7e6bedfcd"
+        "outputId": "c3cb05f0-dd24-4576-a43e-2dd3f5eec65d"
       },
       "outputs": [
         {
@@ -126,7 +126,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-6e5d1bfc-bd7f-4002-8b13-725cbf164216\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-45028e85-b8d8-4338-97d7-e108085ace42\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -228,7 +228,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6e5d1bfc-bd7f-4002-8b13-725cbf164216')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-45028e85-b8d8-4338-97d7-e108085ace42')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -280,12 +280,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-6e5d1bfc-bd7f-4002-8b13-725cbf164216 button.colab-df-convert');\n",
+              "        document.querySelector('#df-45028e85-b8d8-4338-97d7-e108085ace42 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-6e5d1bfc-bd7f-4002-8b13-725cbf164216');\n",
+              "        const element = document.querySelector('#df-45028e85-b8d8-4338-97d7-e108085ace42');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -305,8 +305,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-f5ee8694-b47c-470c-8cc9-e87caf1bba30\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f5ee8694-b47c-470c-8cc9-e87caf1bba30')\"\n",
+              "<div id=\"df-11e1e5d3-381b-4fab-82e4-0c73db9fca2b\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-11e1e5d3-381b-4fab-82e4-0c73db9fca2b')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -425,12 +425,13 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-f5ee8694-b47c-470c-8cc9-e87caf1bba30 button');\n",
+              "        document.querySelector('#df-11e1e5d3-381b-4fab-82e4-0c73db9fca2b button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
+              "\n",
               "    </div>\n",
               "  </div>\n"
             ]
@@ -2188,7 +2189,7 @@
         "id": "UL3GuRL_Ungg",
         "outputId": "f259a403-90bc-48b7-9067-afecfb6a3e94"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2215,7 +2216,7 @@
         "id": "R_yLR99UUwfN",
         "outputId": "6c7e911e-3e33-4986-cbe5-b1228babf1c5"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2797,7 +2798,7 @@
       "metadata": {
         "id": "zOkoe4D4gxkO"
       },
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -2830,13 +2831,18 @@
         "# Stratified KFold with 5 splits\n",
         "skf = StratifiedKFold(n_splits=5)\n",
         "\n",
+        "# Set the threshold for binary classification\n",
+        "threshold = 0.5\n",
+        "\n",
         "# Initialize lists to store results\n",
         "sgd_regression_scores = {}\n",
+        "sgd_classification_scores = {}\n",
         "linear_svc_scores = {}\n",
         "\n",
         "for rate in learning_rates:\n",
         "    sgd_reg = SGDRegressor(learning_rate='constant', eta0=rate)\n",
         "    sgd_reg_scores = []\n",
+        "    sgd_class_scores = []  # Store classification scores\n",
         "    for train_index, test_index in skf.split(X_resampled, y_resampled):\n",
         "        X_train, X_test = X_resampled.iloc[train_index], X_resampled.iloc[test_index]\n",
         "        y_train, y_test = y_resampled.iloc[train_index], y_resampled.iloc[test_index]\n",
@@ -2844,10 +2850,17 @@
         "        sgd_reg.fit(X_train, y_train)\n",
         "        sgd_reg_pred = sgd_reg.predict(X_test)\n",
         "\n",
-        "        mse = np.mean((y_test - sgd_reg_pred) ** 2)  # Calculate Mean Squared Error\n",
+        "        # Calculate Mean Squared Error (MSE)\n",
+        "        mse = np.mean((y_test - sgd_reg_pred) ** 2)\n",
         "        sgd_reg_scores.append(mse)\n",
         "\n",
+        "        # Applying threshold for binary classification\n",
+        "        predicted_classes = (sgd_reg_pred > threshold).astype(int)\n",
+        "        accuracy = accuracy_score(y_test, predicted_classes)\n",
+        "        sgd_class_scores.append(accuracy)\n",
+        "\n",
         "    sgd_regression_scores[rate] = np.mean(sgd_reg_scores)\n",
+        "    sgd_classification_scores[rate] = np.mean(sgd_class_scores)\n",
         "\n",
         "for c_param in regularization_params:\n",
         "    linear_svc = LinearSVC(C=c_param)\n",
@@ -2857,6 +2870,11 @@
         "print(\"SGDRegressor Cross-Validation Accuracy Scores (with Random Oversampling):\")\n",
         "for rate, score in sgd_regression_scores.items():\n",
         "    print(f\"Learning Rate: {rate}, Average MSE: {score}\")\n",
+        "\n",
+        "# Display classification scores for SGDRegressor using threshold\n",
+        "print(\"SGDRegressor Cross-Validation Accuracy Scores (with Threshold):\")\n",
+        "for rate, score in sgd_classification_scores.items():\n",
+        "    print(f\"Learning Rate: {rate}, Average Accuracy (with Threshold): {score}\")\n",
         "\n",
         "# Display scores for LinearSVC\n",
         "print(\"Linear SVC Cross-Validation F1-scores (with Random Oversampling):\")\n",
@@ -2868,30 +2886,38 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_HVQ6sR9U2N9",
-        "outputId": "72bb6a0b-9a09-40ad-8bac-4966f6688d5a"
+        "outputId": "accd7396-318a-4961-e8be-26f81a221d9e"
       },
-      "execution_count": 38,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "SGDRegressor Cross-Validation Accuracy Scores (with Random Oversampling):\n",
-            "Learning Rate: 1e-06, Average MSE: 0.31193141960189835\n",
-            "Learning Rate: 1e-05, Average MSE: 0.17023223579731242\n",
-            "Learning Rate: 0.0001, Average MSE: 0.1620949473578255\n",
-            "Learning Rate: 0.001, Average MSE: 0.25192906185644437\n",
-            "Learning Rate: 0.01, Average MSE: 7.910336217528492e+24\n",
-            "Learning Rate: 0.1, Average MSE: 8.386289297214155e+26\n",
-            "Learning Rate: 1, Average MSE: 7.850709672586117e+28\n",
+            "Learning Rate: 1e-06, Average MSE: 0.30999540187174235\n",
+            "Learning Rate: 1e-05, Average MSE: 0.16986211483145236\n",
+            "Learning Rate: 0.0001, Average MSE: 0.15010496055763872\n",
+            "Learning Rate: 0.001, Average MSE: 0.17992878180306687\n",
+            "Learning Rate: 0.01, Average MSE: 1.3708787849179758e+25\n",
+            "Learning Rate: 0.1, Average MSE: 1.790843406123613e+27\n",
+            "Learning Rate: 1, Average MSE: 2.288364602799148e+29\n",
+            "SGDRegressor Cross-Validation Accuracy Scores (with Threshold):\n",
+            "Learning Rate: 1e-06, Average Accuracy (with Threshold): 0.48299104791995784\n",
+            "Learning Rate: 1e-05, Average Accuracy (with Threshold): 0.79980691592066\n",
+            "Learning Rate: 0.0001, Average Accuracy (with Threshold): 0.8044409338248201\n",
+            "Learning Rate: 0.001, Average Accuracy (with Threshold): 0.7364226786027733\n",
+            "Learning Rate: 0.01, Average Accuracy (with Threshold): 0.5\n",
+            "Learning Rate: 0.1, Average Accuracy (with Threshold): 0.5048095488853782\n",
+            "Learning Rate: 1, Average Accuracy (with Threshold): 0.5\n",
             "Linear SVC Cross-Validation F1-scores (with Random Oversampling):\n",
-            "C parameter: 0.0001, Average F1-score: 0.7845275114491714\n",
-            "C parameter: 0.001, Average F1-score: 0.7944674765842279\n",
-            "C parameter: 0.1, Average F1-score: 0.7879459994512231\n",
-            "C parameter: 0.01, Average F1-score: 0.7887213706312783\n",
-            "C parameter: 1, Average F1-score: 0.7952885299978322\n",
-            "C parameter: 10, Average F1-score: 0.7629906051120867\n",
-            "C parameter: 20, Average F1-score: 0.7372078243612096\n"
+            "C parameter: 0.0001, Average F1-score: 0.7833341252870805\n",
+            "C parameter: 0.001, Average F1-score: 0.7954106234697735\n",
+            "C parameter: 0.1, Average F1-score: 0.7894818519504295\n",
+            "C parameter: 0.01, Average F1-score: 0.7902265377000806\n",
+            "C parameter: 1, Average F1-score: 0.7971653021370384\n",
+            "C parameter: 10, Average F1-score: 0.7410203228943055\n",
+            "C parameter: 20, Average F1-score: 0.6078467543731909\n"
           ]
         }
       ]
@@ -2908,7 +2934,7 @@
     {
       "cell_type": "code",
       "source": [
-        "from sklearn.metrics import mean_squared_error\n",
+        "from sklearn.metrics import accuracy_score\n",
         "from sklearn.model_selection import GridSearchCV\n",
         "from sklearn.linear_model import SGDRegressor\n",
         "\n",
@@ -2930,10 +2956,21 @@
         "\n",
         "# Get the best parameters and best score\n",
         "best_params_sgd = sgd_reg_grid.best_params_\n",
-        "best_score_sgd = -sgd_reg_grid.best_score_  # Convert back to positive since neg_mean_squared_error was used\n",
+        "best_estimator_sgd = sgd_reg_grid.best_estimator_\n",
+        "\n",
+        "# Use the best estimator to make predictions\n",
+        "sgd_reg_pred = best_estimator_sgd.predict(X_resampled)\n",
+        "\n",
+        "# Define threshold for binary classification\n",
+        "threshold = 0.5\n",
+        "predicted_classes = (sgd_reg_pred > threshold).astype(int)\n",
+        "\n",
+        "# Calculate accuracy based on predictions\n",
+        "accuracy = accuracy_score(y_resampled, predicted_classes)\n",
         "\n",
         "print(\"Best Parameters for SGDRegressor:\", best_params_sgd)\n",
-        "print(\"Best MSE Score for SGDRegressor:\", best_score_sgd)\n",
+        "print(\"Best Accuracy for SGDRegressor with Threshold:\", accuracy)\n",
+        "\n",
         "\n"
       ],
       "metadata": {
@@ -2941,16 +2978,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fMjLSsIaxRdV",
-        "outputId": "af2f0309-5e02-4fef-b673-0369dcbd891c"
+        "outputId": "4876fab0-291c-414c-ba94-42e6d1fba6bc"
       },
-      "execution_count": 16,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Best Parameters for SGDRegressor: {'alpha': 0.01, 'eta0': 0.001, 'learning_rate': 'constant'}\n",
-            "Best MSE Score for SGDRegressor: 0.15538805583629958\n"
+            "Best Parameters for SGDRegressor: {'alpha': 0.001, 'eta0': 0.01, 'learning_rate': 'optimal'}\n",
+            "Best Accuracy for SGDRegressor with Threshold: 0.6422327540810953\n"
           ]
         }
       ]
@@ -3000,7 +3037,7 @@
         "id": "3J7O7ugsxZ3p",
         "outputId": "bfd8ac69-6ada-4e1e-fce3-8778b70e5d6d"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3011,15 +3048,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "cz24HYkG0Toi"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
